--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -13,7 +13,7 @@ jobs:
   build-and-push-microservices:
     strategy:
       matrix:
-        service: [service1, service2, service3, service4, service5]
+        service: [common-models, inventory-service, order-service, payment-service, product-service, user-service]
 
     runs-on: ubuntu-latest
 
@@ -30,7 +30,7 @@ jobs:
       - name: Check if microservice has changed
         id: changes
         run: |
-          if git diff --name-only HEAD^ HEAD | grep -q "^${{ matrix.service }}/"; then
+          if git diff --name-only HEAD^ HEAD | grep -q "^service/${{ matrix.service }}/"; then
             echo "files_changed=true" >> $GITHUB_ENV
           else
             echo "files_changed=false" >> $GITHUB_ENV
@@ -38,7 +38,7 @@ jobs:
       - name: Build and push Docker image if changed
         if: env.files_changed == 'true'
         run: |
-          cd ${{ matrix.service }}
+          cd service/${{ matrix.service }}
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest
 
