--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -1,47 +1,38 @@
-name: Build and Push Microservices
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - master
-
-env:
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+    branches: [ "master" ]
 
 jobs:
-  build-and-push-microservices:
-    strategy:
-      matrix:
-        service: [order-service, payment-service]
-
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Log in to DockerHub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+    - name: Get short SHA
+      id: vars
+      run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
-      - name: Check if microservice has changed
-        id: changes
-        run: |
-          if git diff --name-only HEAD^ HEAD | grep -q "^services/${{ matrix.service }}/"; then
-            echo "files_changed=true" >> $GITHUB_ENV
-          else
-            echo "files_changed=false" >> $GITHUB_ENV
-          fi
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: ./services/order-service
+        push: true
+        tags: jovan99djokic/order-service:${{ env.SHORT_SHA }}
+        labels: |
+          org.opencontainers.image.revision=${{ env.SHORT_SHA }}
 
-      - name: Build and push Docker image if changed
-        if: env.files_changed == 'true'
-        run: |
-          cd services/${{ matrix.service }}
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest
-
-      - name: Logout of DockerHub
-        run: docker logout
+    - name: Log out from Docker Hub
+      run: docker logout
