--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -1,38 +1,58 @@
-name: Docker Image CI
+name: Maven Build and Docker
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      # Step 1: Check out the code
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # Step 2: Set up Java
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
-    - name: Get short SHA
-      id: vars
-      run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+      # Step 3: Cache Maven dependencies for faster builds
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: ./services/order-service
-        push: true
-        tags: jovan99djokic/order-service:latest
-        labels: |
-          org.opencontainers.image.revision=${{ env.GITHUB_SHA }}
+      # Step 4: Build with Maven
+      - name: Build with Maven
+        run: mvn clean install
 
-    - name: Log out from Docker Hub
-      run: docker logout
+      # Step 5: Build Docker Image
+      - name: Build Docker Image
+        run: docker build . -t my-app:${{ github.sha }}
+
+      # Step 6: Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # Step 7: Push Docker image to Docker Hub
+      - name: Push Docker Image
+        run: docker push my-app:${{ github.sha }}
+
+      # Step 8: Tag latest version
+      - name: Tag latest version
+        run: docker tag my-app:${{ github.sha }} my-app:latest
+
+      # Step 9: Push latest tag to Docker Hub
+      - name: Push latest tag
+        run: docker push my-app:latest
