--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -33,7 +33,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-    - run: mvn --batch-mode --update-snapshots verify
+    - run: mvn --batch-mode --update-snapshots -f config/config-server/pom.xml verify
     - run: mkdir staging && cp config/config-server/target/*.jar staging
     - uses: actions/upload-artifact@v3
       with:
