--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -60,7 +60,7 @@ jobs:
       # Build the Docker image
       - name: Build Docker Image
         run: |
-          docker build -t jovan99djokic/config-server:${{ github.sha }} .
+          docker build -t jovan99djokic/config-server:${{ github.sha }} -f config/config-server/Dockerfile .
 
       # Log in to Docker Hub
       - name: Docker Hub Login
