--- a/config/config-server/Dockerfile
+++ b/config/config-server/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Copy the application's jar to the container
 COPY target/config-server-0.0.1-SNAPSHOT.jar /app/config-server.jar
-COPY ./configs /configs
+COPY ./target /target
 
 # Expose the port your Spring Boot app runs on
 EXPOSE 8888
