--- a/config/config-server/Dockerfile
+++ b/config/config-server/Dockerfile
@@ -5,7 +5,8 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the application's jar to the container
-COPY ./target /target
+COPY target/config-server-0.0.1-SNAPSHOT.jar /app/config-server.jar
+COPY ./configs /configs
 
 # Expose the port your Spring Boot app runs on
 EXPOSE 8888
