--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -5,9 +5,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-
-  build_test:
-
+  build_and_publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,27 +16,21 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file config/config-server/pom.xml
-
-
-
-
-  publish-job:
-    runs-on: ubuntu-latest
-    needs: build_test
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
+        
+    - name: Build and Verify with Maven
+      run: |
+        mvn -B package --file config/config-server/pom.xml
+        mvn --batch-mode --update-snapshots -f config/config-server/pom.xml verify
+        
+    - name: Prepare JAR for Docker
+      run: mkdir target && cp config/config-server/target/*.jar target
+      
+    - name: Upload JAR Artifact
+      uses: actions/upload-artifact@v3
       with:
-        java-version: '17'
-        distribution: 'temurin'
-    - run: mvn --batch-mode --update-snapshots -f config/config-server/pom.xml verify
-    - run: mkdir target && cp config/config-server/target/*.jar target
-    - uses: actions/upload-artifact@v3
-      with:
-        name: Package
+        name: config-server-0.0.1-SNAPSHOT.jar
         path: target
+
 
 
   dockerize:
@@ -54,7 +46,7 @@ jobs:
       - name: Download JAR Artifact
         uses: actions/download-artifact@v3
         with:
-          name: Package
+          name: config-server-0.0.1-SNAPSHOT.jar
           path: target
 
       # Build the Docker image
