--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -35,7 +35,7 @@ jobs:
 
   dockerize:
     runs-on: ubuntu-latest
-    needs: publish-job
+    needs: build_and_publish
 
     steps:
       # Checkout repository
