--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -28,8 +28,8 @@ jobs:
     - name: Upload JAR Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: config-server-0.0.1-SNAPSHOT.jar
-        path: target
+        name: config-server-jar
+        path: config/config-server/target/config-server-0.0.1-SNAPSHOT.jar
 
 
 
@@ -46,8 +46,8 @@ jobs:
       - name: Download JAR Artifact
         uses: actions/download-artifact@v3
         with:
-          name: config-server-0.0.1-SNAPSHOT.jar
-          path: target
+          name: config-server-jar
+          path: target/
 
       # Build the Docker image
       - name: Build Docker Image
