--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -28,13 +28,13 @@ jobs:
         run: |
           mkdir -p deploy_artifact
           cp config/config-server/target/config-server-0.0.1-SNAPSHOT.jar deploy_artifact/
-          cp -r config/config-server/configs deploy_artifact/
-
       - name: Upload JAR and Configs as Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: config-server-package
+          name: config-server-0.0.1-SNAPSHOT.jar
           path: deploy_artifact
+
+
 
   dockerize:
     runs-on: ubuntu-latest
@@ -45,12 +45,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Prepare Configs for Docker
+        run: |
+          cp config/config-server/configs .
+
+
       # Download the artifact (JAR and configs)
       - name: Download Artifact
         uses: actions/download-artifact@v3
         with:
-          name: config-server-package
-          path: deploy_artifact
+          name: config-server-0.0.1-SNAPSHOT.jar
+          path: target
 
       # Build the Docker image with the downloaded JAR and configs
       - name: Build Docker Image
