--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -36,6 +36,8 @@ jobs:
           name: config-server-artifact
           path: deploy_artifact
 
+
+
   dockerize:
     runs-on: ubuntu-latest
     needs: build_and_publish
@@ -55,7 +57,7 @@ jobs:
         run: |
           mkdir -p target  # Ensure target directory exists
           mv deploy_artifact/config-server-0.0.1-SNAPSHOT.jar ./target/
-          mv deploy_artifact/configs ./
+          mv deploy_artifact/configs .
 
       - name: List all files for debugging
         run: ls -R  # Lists all files to confirm configs and JAR placement
