--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -10,9 +10,8 @@ jobs:
     strategy:
       matrix:
         service:
-          - config/config-server
-          - discovery/eureka-server
-          - gateway/api-gateway
+          - config-server
+          - ../discovery/eureka-server
           # Add other services as needed
 
     steps:
@@ -27,15 +26,15 @@ jobs:
 
       - name: Build and Verify with Maven
         run: |
-          mvn -B package --file ${{ matrix.service }}/pom.xml
-          mvn --batch-mode --update-snapshots -f ${{ matrix.service }}/pom.xml verify
+          mvn -B package --file config/${{ matrix.service }}/pom.xml
+          mvn --batch-mode --update-snapshots -f config/${{ matrix.service }}/pom.xml verify
 
       # Create a folder to store the JAR and configs for artifact upload
       - name: Prepare JAR and Configs for Docker
         run: |
           mkdir -p deploy_artifact_${{ matrix.service }}
-          cp ${{ matrix.service }}/target/${{ matrix.service }}-0.0.1-SNAPSHOT.jar deploy_artifact_${{ matrix.service }}/
-          cp -R ${{ matrix.service }}/configs deploy_artifact_${{ matrix.service }}/
+          cp config/${{ matrix.service }}/target/${{ matrix.service }}-0.0.1-SNAPSHOT.jar deploy_artifact_${{ matrix.service }}/
+          cp -R config/${{ matrix.service }}/configs deploy_artifact_${{ matrix.service }}/
 
       - name: Upload JAR and Configs as Artifact
         uses: actions/upload-artifact@v3
@@ -51,9 +50,8 @@ jobs:
     strategy:
       matrix:
         service:
-          - config/config-server
-          - discovery/eureka-server
-          - gateway/api-gateway
+          - config-server
+          - ../discovery/eureka-server
           # Add other services as needed
 
     steps:
@@ -79,7 +77,7 @@ jobs:
       # Build the Docker image with the root directory as context
       - name: Build Docker Image
         run: |
-          docker build -t jovan99djokic/${{ matrix.service }}:latest -f ${{ matrix.service }}/Dockerfile .
+          docker build -t jovan99djokic/${{ matrix.service }}:latest -f config/${{ matrix.service }}/Dockerfile .
 
       - name: Docker Hub Login
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
