--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -55,10 +55,10 @@ jobs:
     strategy:
       matrix:
         service:
-          - config-server
-          - service-a
-          - service-b
-          # Add other services as needed
+          - name: config-server
+            path: config/config-server
+          - name: eureka-server
+            path: discovery/eureka-server
 
     steps:
       - name: Checkout repository
@@ -67,15 +67,15 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@v3
         with:
-          name: ${{ matrix.service }}-artifact
-          path: deploy_artifact_${{ matrix.service }}
+          name: ${{ matrix.service.name }}-artifact
+          path: deploy_artifact_${{ matrix.service.name }}
 
       # Create target directory and move the JAR and configs
       - name: Prepare Docker Build Context
         run: |
           mkdir -p target  # Ensure target directory exists
-          mv deploy_artifact_${{ matrix.service }}/${{ matrix.service }}-0.0.1-SNAPSHOT.jar ./target/
-          mv deploy_artifact_${{ matrix.service }}/configs .
+          mv deploy_artifact_${{ matrix.service.name }}/${{ matrix.service.name }}-0.0.1-SNAPSHOT.jar ./target/
+          mv deploy_artifact_${{ matrix.service.name }}/configs .
 
       - name: List all files for debugging
         run: ls -R  # Lists all files to confirm configs and JAR placement
@@ -83,10 +83,10 @@ jobs:
       # Build the Docker image with the root directory as context
       - name: Build Docker Image
         run: |
-          docker build -t jovan99djokic/${{ matrix.service }}:latest -f config/${{ matrix.service }}/Dockerfile .
+          docker build -t jovan99djokic/${{ matrix.service.name }}:latest -f ${{ matrix.service.path }}/Dockerfile .
 
       - name: Docker Hub Login
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Push Docker Image
-        run: docker push jovan99djokic/${{ matrix.service }}:latest
+        run: docker push jovan99djokic/${{ matrix.service.name }}:latest
