--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -37,7 +37,7 @@ jobs:
           cp ${{ matrix.service.path }}/target/${{ matrix.service.name }}-0.0.1-SNAPSHOT.jar deploy_artifact_${{ matrix.service.name }}/
 
       - name: Test to see if this is config-server
-        if: matrix.service == 'config-server'  # Run only for config-server
+        if: matrix.service.name == 'config-server'  # Run only for config-server
         run: |
           cp -R ${{ matrix.service.path }}/configs deploy_artifact_${{ matrix.service.name }}/
 
