--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -14,6 +14,10 @@ jobs:
             path: config/config-server
           - name: eureka-server
             path: discovery/eureka-server
+          - name: api-gateway
+            path: gateway/api-gateway
+          - name: order-service
+            path: service/order-service
 
     steps:
       - uses: actions/checkout@v3
@@ -59,6 +63,10 @@ jobs:
             path: config/config-server
           - name: eureka-server
             path: discovery/eureka-server
+          - name: api-gateway
+            path: gateway/api-gateway
+          - name: order-service
+            path: service/order-service
 
     steps:
       - name: Checkout repository
