--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -17,7 +17,7 @@ jobs:
           - name: api-gateway
             path: gateway/api-gateway
           - name: order-service
-            path: service/order-service
+            path: services/order-service
 
     steps:
       - uses: actions/checkout@v3
