--- a/.github/workflows/Pipeline.yaml
+++ b/.github/workflows/Pipeline.yaml
@@ -14,8 +14,8 @@ jobs:
             path: config/config-server
           - name: eureka-server
             path: discovery/eureka-server
-          - name: api-gateway
-            path: gateway/api-gateway
+          - name: order-service
+            path: services/order-service
 
     steps:
       - uses: actions/checkout@v3
@@ -61,8 +61,8 @@ jobs:
             path: config/config-server
           - name: eureka-server
             path: discovery/eureka-server
-          - name: api-gateway
-            path: gateway/api-gateway
+          - name: order-service
+            path: services/order-service
 
     steps:
       - name: Checkout repository
